Fix contrast for tip in dark mode

--- a/assets/main.css
+++ b/assets/main.css
@@ -115,6 +115,6 @@
   }
 
   article .tip {
-    @apply bg-green-200 rounded p-4
+    @apply bg-green-200 dark:bg-green-700 rounded p-4
   }
 }
